build: Add a connection string

--- a/src/Api/Lilibre.Api/appsettings.json
+++ b/src/Api/Lilibre.Api/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "Server=localhost,1433; Database=Lilibre; User Id=sa; Password=Password!;"
 }
