--- a/src/Api/Lilibre.Api/appsettings.json
+++ b/src/Api/Lilibre.Api/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=localhost,1433; Database=Lilibre; User Id=sa; Password=Password!;"
+  "ConnectionString": "Server=localhost,1433; Database=Lilibre; User Id=sa; Password=Password!; Encrypt=False; TrustServerCertificate=True; Connection Timeout=30;"
 }
