build: Update configuration

--- a/src/Api/Api/appsettings.Development.json
+++ b/src/Api/Api/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionString": "Server=localhost,1433; Database=Lilibre; User Id=sa; Password=Password!; Encrypt=False; TrustServerCertificate=True; Connection Timeout=30;"
 }
