build: Extract Production configuration

--- a/src/Api/Api/appsettings.json
+++ b/src/Api/Api/appsettings.json
@@ -5,6 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionString": "Server=mssql,1433; Database=Lilibre; User Id=sa; Password=Password!; Encrypt=False; TrustServerCertificate=True; Connection Timeout=30;"
+  "AllowedHosts": "*"
 }
