--- a/src/Web/appsettings.Development.json
+++ b/src/Web/appsettings.Development.json
@@ -5,5 +5,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DataConnection": "Server=localhost, 1433;Connection Timeout=30;Command Timeout=30;Persist Security Info=False;TrustServerCertificate=True;User ID=sa;Password=Password!;Initial Catalog=Lilibre"
+  },
+  "Databases": {
+    "Data": {
+      "NoPluralize": false,
+      "UseDatabaseNames": false
+    }
   }
 }
