--- a/src/Api/Api/Api.csproj
+++ b/src/Api/Api/Api.csproj
@@ -20,6 +20,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Application\Application.csproj" />
+		<ProjectReference Include="..\Contracts\Contracts.csproj" />
 		<ProjectReference Include="..\Persistence\Persistence.csproj" />
 	</ItemGroup>
 
